# xinos

./: .gitignore  Cargo.toml  LICENSE  README.md  bootstrap.nix  default.nix  flake.nix  rust-toolchain.toml  target.json
kernel/: Cargo.toml
kernel/src/: framebuffer.rs  main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: mod.rs
kernel/src/arch/x86_64/: mod.rs
kernel/targets/: aarch64-kernel.json
src/: ascii.rs  debug.rs  font.rs  framebuffer.rs  main.rs  screen.rs  serial.rs
src/fonts/: kakwa.bdf
targets/: riscv64gc-kernel.json  x86_64-kernel.json
