[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
limine = "0.5.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
rgb = "0.8.52"
uart_16550 = "0.4.0"
spin = "0.10.0"
owo-colors = "4.2.2"

[[bin]]
name = "kernel"
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
